--- a/server/test.html
+++ b/server/test.html
@@ -731,8 +731,7 @@
         
 		</layout>
     </layout>
-    <layout id="1567601479827" editor:_for_="1567601479827" height="8" width="30" left="0" top="140" orientation="horizontal" style="overflow:visible;zIndex:1"><text editor:_printName_="测试项目" style="orientation:horizontal;fontFamily:宋体;fontSize:8;fontWeight:normal;align:left;valign:left;"><![CDATA[<%=_data.name%>]]></text></layout>
-		<footer height="10" ><%if(_data.adsInfo && _data.adsInfo.bannerUrl && _data.adsInfo.bannerUrl != ''){%>
+<layout id="1567648366443" editor:_for_="1567648366443" height="38.34" width="86.44" left="0" top="130" orientation="horizontal" style="overflow:visible;zIndex:1"><text editor:_printName_="姓名  性别 省 市  区" style="orientation:horizontal;fontFamily:宋体;fontSize:8;fontWeight:normal;align:left;valign:left;"><![CDATA[<%=_data.name%>  <%=_data.sex%>  <%=_data.color%>  <%=_data.province%>  <%=_data.city%>  ]]></text></layout>		<footer height="10" ><%if(_data.adsInfo && _data.adsInfo.bannerUrl && _data.adsInfo.bannerUrl != ''){%>
 <layout 
             editor:_for_="1558060158228235"
             
