--- a/server/test.html
+++ b/server/test.html
@@ -732,7 +732,7 @@
         
 		</layout>
 		</layout>
-		<layout id="1567648366443" editor:_for_="1567648366443" height="38.34" width="86.44" left="0" top="130" orientation="horizontal" style="overflow:visible;zIndex:1"><text editor:_printName_="姓名 性别 省 市 区" style="orientation:horizontal;fontFamily:宋体;fontSize:8;fontWeight:normal;align:left;valign:left;"><![CDATA[<%=_data.name%> <%=_data.sex%> <%=_data.color%> <%=_data.province%> <%=_data.city%> ]]></text></layout><footer height="10" ><%if(_data.adsInfo && _data.adsInfo.bannerUrl && _data.adsInfo.bannerUrl != ''){%>
+		<layout id="1567670144816" editor:_for_="1567670144816" height="8" width="30" left="0" top="130" orientation="horizontal" style="overflow:visible;zIndex:1"><text editor:_printName_="系统单号" style="orientation:horizontal;fontFamily:宋体;fontSize:8;fontWeight:normal;align:left;valign:left;"><![CDATA[<%=_data.sysno%>]]></text></layout><layout id="1567672381335" editor:_for_="1567672381335" height="23.81" width="23.81" left="47.97" top="139.17" style="overflow:visible;zIndex:2"><image src="https://timgsa.baidu.com/timg?image&amp;quality=80&amp;size=b9999_10000&amp;sec=1567682446945&amp;di=fea9f1095d0be40fa74958264fc4ae76&amp;imgtype=0&amp;src=http%3A%2F%2Fimg.tuixinwang.cn%2Ftouxiang%2F131406.jpg"></image></layout><footer height="10" ><%if(_data.adsInfo && _data.adsInfo.bannerUrl && _data.adsInfo.bannerUrl != ''){%>
 <layout 
             editor:_for_="1558060158228235"
             
